# _WARD-core

./: .gitignore  README.md  main.py  pyproject.toml  test_pyinstaller.py  ward-core.spec
ward_core/: __init__.py  __main__.py  cli.py  config.yaml  pyproject.toml
ward_core/.github/workflows/: ci.yml  release.yml
ward_core/application/: __init__.py  analyze_device.py
ward_core/heuristics/: __init__.py
ward_core/heuristics/anomalies/: __init__.py  process_anomaly.py  system_anomalies.py
ward_core/heuristics/base/: __init__.py  base_heuristic.py  heuristic_registry.py  quality_gates.py
ward_core/heuristics/behavior/: __init__.py  behavioral_analysis.py
ward_core/heuristics/context/: installation_context.py
ward_core/heuristics/crashes/: __init__.py  exploitation_crash.py
ward_core/heuristics/memory/: __init__.py  dex_analysis.py  memory_exploitation.py
ward_core/heuristics/permissions/: __init__.py  permission_analysis.py
ward_core/heuristics/system/: __init__.py  system_security.py
ward_core/heuristics/user/: user_analysis.py
ward_core/infrastructure/: __init__.py  data_loader_service.py
ward_core/infrastructure/collectors/: __init__.py  adb_shell_collector.py  base_collector.py  bugreport_collector.py  collection_profiles.py  collector_registry.py  hybrid_collector.py
ward_core/infrastructure/device/: __init__.py  adb_device_detector.py
ward_core/infrastructure/logging/: __init__.py  enhanced_logging.py
ward_core/infrastructure/parsers/: __init__.py  base_parser.py  dex_parser.py  format_detector.py  improved_package_parser.py  (+4 more)
(+39 files in other folders)
